| Summary: | ASTERISK-27100: channel: ast_waitfordigit_full fails to clear flag in an error branch. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-06-30 23:58:56 | Date Closed: | 2017-07-10 17:57:46 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Channels |
| Versions: | 13.16.0 14.5.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | ast_waitfordigit_full fails to clear the channel flag AST_FLAG_END_DTMF_ONLY if ast_read returns NULL. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-06-30 23:58:56.563-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||